--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ ul{
   button {
     border-radius: 8px;
     border: none;
-    background-color: #2563eb;
+    background-color: #0fbbc7;
     color: white;
     font-size: 18px;
     padding: 16px 24px;
